Added configuration for tablature fonts. Merged all tab fonts into one.
Tablature symbols and styles are no longer hard coded but stored in a config. file; this allowed to merge all tab fonts into one.


Former-commit-id: 6fac784231d38db33d8f889c7e5159b55234ea3d

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -395,10 +395,7 @@ if (APPLE)
       ../fonts/MuseJazz.ttf
       ../fonts/FreeSerifMscore.ttf
       ../fonts/FreeSans.ttf
-      ../fonts/mscore_tab_baroque.ttf
-      ../fonts/mscore_tab_modern.ttf
-      ../fonts/mscore_tab_renaiss.ttf
-      ../fonts/mscore_tab_renaiss2.ttf
+      ../fonts/mscoreTab.ttf
       ../fonts/mscore-BC.ttf
      DESTINATION ${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}fonts
      )
