--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -60,6 +60,7 @@ QT4_WRAP_UI (ui_headers
       inspector_segment.ui inspector_beam.ui inspector_note.ui
       rest.ui inspector_chord.ui omrpanel.ui startdialog.ui masterpalette.ui
       inspector_group_element.ui inspector_image.ui stem.ui inspector_lasso.ui
+      box.ui
       ${SCRIPT_UI}
       )
 
