cleanups for edit mode
Former-commit-id: 4b0d55aec2cb110858e29023115c40653eacce43

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -194,6 +194,7 @@ add_executable ( ${ExecutableName}
       inspectorBase.cpp inspectorBeam.cpp masterpalette.cpp
       inspectorGroupElement.cpp dragdrop.cpp inspectorImage.cpp
       waveview.cpp musicxmlsupport.cpp helpBrowser.cpp inspectorLasso.cpp
+      editelement.cpp
       ${OMR_FILES}
       ${AUDIO}
       ${SCRIPT_FILES}
