--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -477,5 +477,9 @@ add_custom_target(install_plugins_manual
    COMMAND ${PROJECT_BINARY_DIR}/manual/genManual ${PROJECT_SOURCE_DIR} ${CMAKE_INSTALL_PREFIX}/${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}manual
    )
 
-install(CODE "execute_process(COMMAND make install_plugins_manual)")
+if (MINGW)
+  install(CODE "execute_process(COMMAND cmd /c \"make install_plugins_manual\")")
+else (MINGW)
+  install(CODE "execute_process(COMMAND make install_plugins_manual)")
+endif (MINGW)
 
