add unit test for element
Former-commit-id: 12e5cc562925ffef7686cd7dae9e8df44062d614

--- a/mtest/libmscore/element/CMakeLists.txt
+++ b/mtest/libmscore/element/CMakeLists.txt
@@ -11,8 +11,7 @@
 #  the file LICENSE.GPL
 #=============================================================================
 
-subdirs(
-      hairpin note midi compat link measure beam split join
-      timesig layout element
-      )
+set(TARGET tst_element)
+
+include(${PROJECT_SOURCE_DIR}/mtest/cmake.inc)
 
