remove lib prefix for libsdnfile in CMakeLists.txt on Windows
Former-commit-id: 95e20c86d837da2ee5cc8e8fcf09c5dfe43ea439

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -261,7 +261,7 @@ if (MINGW)
       )
 
    if (HAS_AUDIOFILE)
-      target_link_libraries(mscore libsndfile-1)
+      target_link_libraries(mscore sndfile-1)
    endif (HAS_AUDIOFILE)
 
    if (OGGVORBIS)
