readd midi regression test
Former-commit-id: b6a778bf43b337a3a826c503dd8f81d8db0d73ef

--- a/mtest/libmscore/CMakeLists.txt
+++ b/mtest/libmscore/CMakeLists.txt
@@ -13,7 +13,7 @@
 
 subdirs(
       hairpin note compat link measure beam split join
-      timesig layout element
+      timesig layout element midi
       )
 
 # midi - does not work
