build plugin documentation on mac
Former-commit-id: 2d3b0b983d86567ce9b904bbf9ccacbb8b8edebb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,6 @@ include ( ${PROJECT_SOURCE_DIR}/build/FindPulseAudio.cmake)
 ##
 ##  look for Qt4
 ##
-
 set(QT_MIN_VERSION    "4.8.0")
 set(QT_USE_QTXML         TRUE)
 set(QT_USE_QTSVG         TRUE)
@@ -474,7 +473,7 @@ add_custom_command(OUTPUT ${PROJECT_BINARY_DIR}/plugins
    )
 
 add_custom_target(install_plugins_manual
-   COMMAND ${PROJECT_BINARY_DIR}/manual/genManual ${PROJECT_SOURCE_DIR} ${CMAKE_INSTALL_PREFIX}/${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}manual
+   COMMAND ${PROJECT_BINARY_DIR}/manual/${CMAKE_CFG_INTDIR}/genManual ${PROJECT_SOURCE_DIR} ${CMAKE_INSTALL_PREFIX}/${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}manual
    )
 
 if (MINGW)
