update windows build to use Qt 4.8.4
Former-commit-id: c8669b6ee9bfbecd150b5e09cd0ec5f1096ed29d

--- a/Makefile.mingw
+++ b/Makefile.mingw
@@ -21,7 +21,7 @@
 
 REVISION  = $(shell type mscore\revision.h)
 VERSION   = 2.0b-${REVISION}
-MINGW_DIR = C:\QtSDK\mingw
+MINGW_DIR = C:\MinGW
 CPUS = 2
 
 release:
