compilation fixes for omr; update harmony an fret layout
Former-commit-id: 8fc30fc420798243b4ae380b7a3724ae5b462fe7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,18 +37,20 @@ set(AEOLUS            TRUE)         # pipe organ synthesizer
 set(SCRIPT_INTERFACE  TRUE)
 
 option (OSC "enable OSC remote control protocol" ON)        # osc remote control
-option (OMR "enable PDF import"  OFF)                        # OMR - optical music recognition
+option (OMR "enable PDF import"  ON)                        # OMR - optical music recognition
 
 if (APPLE OR MINGW)
       set(GCC_VISIBILITY FALSE)     # warnings if not, with gcc4.4 from qt
       set(AEOLUS TRUE)
-      set(OMR FALSE) # needs work to get rid of fontconfig dependency
+      set(OMR FALSE)                # needs work to get rid of fontconfig dependency
 endif (APPLE OR MINGW)
 
 if (OMR)
-      set(OCR    FALSE) # requires tesseract 3.0
+      message("OMR enabled")
+      set(OCR    FALSE)  # requires tesseract 3.0
                         # for installation see: http://ubuntuforums.org/showthread.php?t=1647350
 else (OMR)
+      message("OMR disabled")
       set(OCR FALSE)
 endif (OMR)
 
