--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -272,8 +272,8 @@ if (MINGW)
       target_link_libraries(mscore aeolus)
    endif (AEOLUS)
 
-	if (OMR)
-      target_link_libraries(mscore omr fitz openjpeg jbig2dec jpeg)
+   if (OMR)
+      target_link_libraries(mscore omr fitz freetype jbig2dec jpeg openjpeg)
       if (OCR)
             target_link_libraries(mscore tesseract_api)
       endif (OCR)
@@ -358,7 +358,7 @@ else (MINGW)
    endif (AEOLUS)
 
    if (OMR)
-      target_link_libraries(mscore omr fitz jbig2dec jpeg openjpeg fontconfig freetype)
+      target_link_libraries(mscore omr fitz fontconfig freetype jbig2dec jpeg openjpeg)
       if (OCR)
             target_link_libraries(mscore tesseract_api)
       endif (OCR)
