enable musicxml support, move needed xml functions to musicxml code
Former-commit-id: 8fbfa094b1c990689f7d9dcfb34efbd6e7917c93

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -198,7 +198,7 @@ add_executable ( ${ExecutableName}
       waveview.cpp helpBrowser.cpp inspectorLasso.cpp
       editelement.cpp inspectorVolta.cpp inspectorOttava.cpp inspectorTrill.cpp
       inspectorHairpin.cpp qmlplugin.cpp
-#      musicxmlsupport.cpp exportxml.cpp importxml.cpp
+      musicxmlsupport.cpp exportxml.cpp importxml.cpp
       ${OMR_FILES}
       ${AUDIO}
       ${SCRIPT_FILES}
