fix for pitch split + regression test
Former-commit-id: 3d55d860b9f388e4fa339940a530877a5afa7725

--- a/mtest/libmscore/pitchsplit/CMakeLists.txt
+++ b/mtest/libmscore/pitchsplit/CMakeLists.txt
@@ -11,10 +11,7 @@
 #  the file LICENSE.GPL
 #=============================================================================
 
-subdirs(
-      hairpin note compat link measure beam split join pitchsplit
-      timesig layout element midi dynamic plugins copypaste
-      )
+set(TARGET tst_pitchsplit)
 
-# midi - does not work
+include(${PROJECT_SOURCE_DIR}/mtest/cmake.inc)
 
