Improve handling of mscore/revision.h
Added a default mscore/revision.h containing "Unknown" as the
revision number (mscore/revision.h remains in .gitignore).
Removed the dependency on "revision" in the Makefiles. Now
"make revision" must be done manually if required.
Added sample post-checkout git hook to allow git automatically
to update mscore/revision.h when doing a git checkout. If installed,
this removes the need to do "make revision" manually.


Former-commit-id: d82fced19277e3cd627550287e3b91f5fbf80ef2

--- a/Makefile.osx
+++ b/Makefile.osx
@@ -58,7 +58,7 @@ lrelease:
 revision:
 	@git rev-parse --short HEAD > mscore/revision.h
 
-version: revision
+version:
 	@echo ${VERSION}
 
 install:
