add new output file format for segment positions
Former-commit-id: fc7fc3aff3d276a0fc888b5b873eb2c6e36c1c85

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -199,6 +199,7 @@ add_executable ( ${ExecutableName}
       editelement.cpp inspectorVolta.cpp inspectorOttava.cpp inspectorTrill.cpp
       inspectorHairpin.cpp qmlplugin.cpp
       musicxmlsupport.cpp exportxml.cpp importxml.cpp
+      savePositions.cpp
       ${OMR_FILES}
       ${AUDIO}
       ${SCRIPT_FILES}
