fix some compilation warnings, add some file to CMakeList for qtcreator
Former-commit-id: 01528e67ad7219d22001ed3e7c80ee6e978e85ed

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -203,6 +203,8 @@ add_executable ( ${ExecutableName}
       ${OMR_FILES}
       ${AUDIO}
       ${SCRIPT_FILES}
+      musescoreCore.h
+      driver.h
       )
 
 if (APPLE)
