start cleanup of regression tests
Former-commit-id: 09676fb1dcf51c8549269e6bd7c9d5b3767fb2b7

--- a/mtest/libmscore/CMakeLists.txt
+++ b/mtest/libmscore/CMakeLists.txt
@@ -12,7 +12,7 @@
 #=============================================================================
 
 subdirs(
-      hairpin note compat link measure beam split join pitchsplit
+      hairpin note compat link measure beam split join splitstaff
       timesig layout element midi dynamic plugins copypaste
       )
 
