--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -183,7 +183,7 @@ add_executable ( ${ExecutableName}
       importgtp.cpp fotomode.cpp drumtools.cpp
       selinstrument.cpp texteditor.cpp editstafftype.cpp texttools.cpp edittools.cpp
       editpitch.cpp editstringdata.cpp editraster.cpp pianotools.cpp mediadialog.cpp
-      profile.cpp exportmp3.cpp chordeditor.cpp chordview.cpp
+      workspace.cpp exportmp3.cpp chordeditor.cpp chordview.cpp
       album.cpp webpage.cpp textstyle.cpp tempoproperties.cpp
       lineproperties.cpp stafftextproperties.cpp splitstaff.cpp
       tupletdialog.cpp tupletproperties.cpp glissandoproperties.cpp
