more workspace changes
Former-commit-id: 6d6448e93172e5294602d5fbb21577f8485c9600

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -18,7 +18,7 @@
 #  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #=============================================================================
 
-subdirs( templates wallpaper locale styles sound manual)
+subdirs(templates wallpaper locale styles sound manual workspaces)
 
 install (DIRECTORY
       plugins
