disable palette operations for readOnly workspaces
Former-commit-id: 0650e9fe0e73b8146d1e7c35fe7b21b6eef3894a

--- a/share/sound/CMakeLists.txt
+++ b/share/sound/CMakeLists.txt
@@ -19,7 +19,7 @@
 #=============================================================================
 
 install(FILES
-      TimGM6mb.sf2
+      fluid.sf3
       DESTINATION ${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}sound
       )
 
