change sf path to fluid.sf3
Former-commit-id: eab742f235273b8b21a80e0e595fa13da2401408

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -18,7 +18,8 @@
 #  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #=============================================================================
 
-subdirs(templates wallpaper locale styles sound manual workspaces)
+subdirs(templates wallpaper locale styles sound manual
+   workspaces)
 
 install (DIRECTORY
       plugins
