Fix compilation on MinGW with GCC 4.7.2
Former-commit-id: ace44c58da62f64123f8e1851b201812d36712e5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -306,24 +306,24 @@ add_custom_command(
    WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
    )
 
-set(CMAKE_CXX_FLAGS_DEBUG   "-std=c++0x -g")
-set(CMAKE_CXX_FLAGS_RELEASE "-std=c++0x -O2 -DNDEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG   "-std=gnu++0x -g")
+set(CMAKE_CXX_FLAGS_RELEASE "-std=gnu++0x -O2 -DNDEBUG")
 
 if (CMAKE_BUILD_TYPE STREQUAL "DEBUG")
       if (MINGW)
-            set(FLAGS -std=c++0x -DQT_DEBUG -DQT_DLL)
+            set(FLAGS -std=gnu++0x -DQT_DEBUG -DQT_DLL)
       else (MINGW)
-      	if(APPLE)
-            	set (FLAGS -std=c++0x -O0 -DQT_DEBUG)
+            if(APPLE)
+                  set (FLAGS -std=gnu++0x -O0 -DQT_DEBUG)
             else (APPLE)
-            	set (FLAGS -std=c++0x -DQT_DEBUG)
+                  set (FLAGS -std=gnu++0x -DQT_DEBUG)
             endif(APPLE)
       endif (MINGW)
 else (CMAKE_BUILD_TYPE STREQUAL "DEBUG")
       if (MINGW)
-            set(FLAGS -std=c++0x -O2 -DNDEBUG -DQT_DLL -DQT_NO_DEBUG)
+            set(FLAGS -std=gnu++0x -O2 -DNDEBUG -DQT_DLL -DQT_NO_DEBUG)
       else (MINGW)
-            set(FLAGS -std=c++0x -O2 -DNDEBUG -DQT_NO_DEBUG)
+            set(FLAGS -std=gnu++0x -O2 -DNDEBUG -DQT_NO_DEBUG)
       endif (MINGW)
 endif (CMAKE_BUILD_TYPE STREQUAL "DEBUG")
 
