Fix mtest link error due to missing importxmlfirstpass.cpp
Former-commit-id: afdc1de38f2ce79921203db436ddadce778084ee

--- a/mtest/CMakeLists.txt
+++ b/mtest/CMakeLists.txt
@@ -35,6 +35,7 @@ add_library(
       ${PROJECT_SOURCE_DIR}/mscore/exportxml.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importmidi.cpp
       ${PROJECT_SOURCE_DIR}/mscore/importxml.cpp
+      ${PROJECT_SOURCE_DIR}/mscore/importxmlfirstpass.cpp
       ${PROJECT_SOURCE_DIR}/mscore/musicxmlsupport.cpp
       ${PROJECT_SOURCE_DIR}/mscore/qmlplugin.cpp
       ${PROJECT_SOURCE_DIR}/mscore/shortcut.cpp
