remove hardcoded path for rpath setting
Former-commit-id: 6623152d8a464dcd845869f72797b6f1cf897b6e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -294,8 +294,7 @@ if (NOT MINGW AND NOT APPLE)
 #     set library search path for runtime linker to load the same
 #     qt libraries as we used at compile time
 #
-set (QT_LIBRARY_DIR "/home/ws/Qt5.0.1/5.0.1/gcc_64/lib")
-set (CMAKE_EXE_LINKER_FLAGS "-Wl,-rpath=${QT_LIBRARY_DIR}")
+set (CMAKE_EXE_LINKER_FLAGS "-Wl,-rpath=${_qt5Core_install_prefix}")
 endif (NOT MINGW AND NOT APPLE)
 
 #
