Add missing system libraries for MinGW install
Former-commit-id: 1b942f7177ee6a5c02bcdcae927170ab1984fabb

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -289,6 +289,8 @@ if (MINGW)
 
    install_files ( /bin .dll
       ${CROSS}/bin/libgcc_s_sjlj-1.dll
+      ${CROSS}/bin/libstdc++-6.dll
+      ${CROSS}/bin/libwinpthread-1.dll
       ${CROSS}/lib/portaudio.dll
       ${CROSS}/lib/libsndfile-1.dll
       ${CROSS}/lib/libogg.dll
