update for Jump and Marker elements
Former-commit-id: d846e3d0d33db0cb0a8c2f07fdecd4fde20ca47c

--- a/libmscore/CMakeLists.txt
+++ b/libmscore/CMakeLists.txt
@@ -22,7 +22,8 @@ if (SCRIPT_INTERFACE)
       rest.h segment.h shadownote.h simpletext.h slur.h spacer.h spanner.h
       stafftext.h stem.h symbol.h system.h tempotext.h textframe.h text.h
       textline.h timesig.h tremolobar.h tremolo.h trill.h tuplet.h volta.h
-      score.h cursor.h page.h part.h staff.h mscore.h staffstate.h
+      score.h cursor.h page.h part.h staff.h mscore.h staffstate.h marker.h
+      jump.h
       )
 endif (SCRIPT_INTERFACE)
 
@@ -73,7 +74,7 @@ add_library (
       property.cpp range.cpp elementmap.cpp notedot.cpp imageStore.cpp
       qzip.cpp audio.cpp splitMeasure.cpp joinMeasure.cpp midifile.cpp
       exportmidi.cpp cursor.cpp read114.cpp sparm.cpp paste.cpp
-      bsymbol.cpp
+      bsymbol.cpp marker.cpp jump.cpp
       )
 if (SCRIPT_INTERFACE)
    set_target_properties (
